# Copyright (c) 2021 Huawei Device Co., Ltd.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program (in the main directory of the NTFS-3G
# distribution in the file COPYING); if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

import("//build/ohos.gni")
config("ntfs_default") {
  cflags = [
    "-Wno-error",
    "-Wno-address-of-packed-member",
    "-D_LARGEFILE_SOURCE",
    "-D_FILE_OFFSET_BITS=64",
    "-DHAVE_CONFIG_H",
  ]

  include_dirs = [
    "../include",
    "../include/fuse-lite",
    "..",
  ]
}

ohos_static_library("libfuse_lite") {
  sources = [
    "fuse.c",
    "fuse_kern_chan.c",
    "fuse_loop.c",
    "fuse_lowlevel.c",
    "fuse_opt.c",
    "fuse_session.c",
    "fuse_signals.c",
    "fusermount.c",
    "helper.c",
    "mount.c",
    "mount_util.c",
  ]
  configs = [ ":ntfs_default" ]

  subsystem_name = "filemanagement"
  part_name = "storage_service"
}
