# Copyright (c) 2021 Huawei Device Co., Ltd.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program (in the main directory of the NTFS-3G
# distribution in the file COPYING); if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

import("//build/ohos.gni")
config("ntfs_default") {
  cflags = [
    "-Wno-error",
    "-Wno-address-of-packed-member",
    "-D_LARGEFILE_SOURCE",
    "-D_FILE_OFFSET_BITS=64",
    "-DHAVE_CONFIG_H",
  ]
  include_dirs = [
    "../include",
    "../include/ntfs-3g",
    "..",
  ]
}

ohos_static_library("libntfs_3g") {
  sources = [
    "acls.c",
    "attrib.c",
    "attrlist.c",
    "bitmap.c",
    "bootsect.c",
    "cache.c",
    "collate.c",
    "compat.c",
    "compress.c",
    "debug.c",
    "device.c",
    "dir.c",
    "ea.c",
    "efs.c",
    "index.c",
    "inode.c",
    "ioctl.c",
    "lcnalloc.c",
    "logfile.c",
    "logging.c",
    "mft.c",
    "misc.c",
    "mst.c",
    "object_id.c",
    "realpath.c",
    "reparse.c",
    "runlist.c",
    "security.c",
    "unistr.c",
    "unix_io.c",
    "volume.c",
    "xattrs.c",
  ]
  configs = [ ":ntfs_default" ]

  subsystem_name = "filemanagement"
  part_name = "storage_service"
}
