# Copyright (c) 2021 Huawei Device Co., Ltd.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program (in the main directory of the NTFS-3G
# distribution in the file COPYING); if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

import("//build/ohos.gni")
config("ntfs_default") {
  cflags = [
    "-Wno-error",
    "-Wno-address-of-packed-member",
    "-D_LARGEFILE_SOURCE",
    "-D_FILE_OFFSET_BITS=64",
    "-DHAVE_CONFIG_H",
  ]
  include_dirs = [
    ".",
    "../include",
    "../include/fuse-lite",
    "../include/ntfs-3g",
    "..",
  ]
}

ohos_executable("fsck.ntfs") {
  sources = [
    "ntfsck.c",
    "utils.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [
    "../libfuse-lite:libfuse_lite",
    "../libntfs-3g:libntfs_3g",
  ]
  install_enable = true
  subsystem_name = "filemanagement"
  part_name = "storage_service"
  install_images = [ "system" ]
}
ohos_executable("ntfsfix") {
  sources = [
    "ntfsfix.c",
    "utils.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [
    "../libfuse-lite:libfuse_lite",
    "../libntfs-3g:libntfs_3g",
  ]
  install_enable = true
  subsystem_name = "filemanagement"
  part_name = "storage_service"
  install_images = [ "system" ]
}
ohos_executable("mount.ntfs") {
  sources = [
    "../src/ntfs-3g.c",
    "../src/ntfs-3g_common.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [
    "../libfuse-lite:libfuse_lite",
    "../libntfs-3g:libntfs_3g",
  ]
  install_enable = true
  subsystem_name = "filemanagement"
  part_name = "storage_service"
  install_images = [ "system" ]
}
ohos_executable("ntfsresize") {
  sources = [
    "ntfsresize.c",
    "utils.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [
    "../libfuse-lite:libfuse_lite",
    "../libntfs-3g:libntfs_3g",
  ]
  install_enable = true
  subsystem_name = "filemanagement"
  part_name = "storage_service"
  install_images = [ "system" ]
}

ohos_executable("ntfslabel") {
  sources = [
    "ntfslabel.c",
    "utils.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [ "../libntfs-3g:libntfs_3g" ]
  install_enable = true
  subsystem_name = "filemanagement"
  part_name = "storage_service"
  install_images = [ "system" ]
}
